Some general changes are implemented.