@@ -2,18 +2,14 @@ package com.barisyenigun.blogserver.service;
 
 
 import com.barisyenigun.blogserver.entity.Post;
-import com.barisyenigun.blogserver.entity.Tag;
 import com.barisyenigun.blogserver.entity.User;
 import com.barisyenigun.blogserver.exception.ResourceNotFoundException;
 import com.barisyenigun.blogserver.exception.ResourceType;
 import com.barisyenigun.blogserver.exception.UnauthorizedException;
 import com.barisyenigun.blogserver.repository.PostRepository;
-import com.barisyenigun.blogserver.repository.RateRepository;
 import com.barisyenigun.blogserver.repository.UserRepository;
 import com.barisyenigun.blogserver.request.PostRequest;
 import com.barisyenigun.blogserver.response.PostResponse;
-import com.barisyenigun.blogserver.response.TagResponse;
-import com.barisyenigun.blogserver.response.UserResponse;
 import com.barisyenigun.blogserver.util.FileUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -21,23 +17,23 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class PostService {
     private final PostRepository postRepository;
-    private final RateRepository rateRepository;
     private final UserService userService;
     private final UserRepository userRepository;
     private final FileUtil fileUtil;
 
     @Autowired
-    public PostService(PostRepository postRepository, RateRepository rateRepository, UserService userService, UserRepository userRepository, FileUtil fileUtil){
+    public PostService(PostRepository postRepository, UserService userService, UserRepository userRepository, FileUtil fileUtil){
         this.postRepository = postRepository;
-        this.rateRepository = rateRepository;
         this.userService = userService;
         this.userRepository = userRepository;
         this.fileUtil = fileUtil;
@@ -85,7 +81,7 @@ public class PostService {
 
     public PostResponse getPost(Long id){
         Post post = postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException(ResourceType.POST));
-        return fromEntity(post);
+        return PostResponse.fromEntity(post);
     }
 
     public byte[] getCaptionPhoto(Long id){
@@ -102,7 +98,7 @@ public class PostService {
         User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException(ResourceType.USER));
         Pageable pageable = PageRequest.of(page, size, Sort.by("publishedDate").descending());
         Page<Post> postsByUserAndPostType = postRepository.findAllByUserAndPostType(user, postType, pageable);
-        return postsByUserAndPostType.map(this::fromEntity);
+        return postsByUserAndPostType.map(PostResponse::fromEntity);
     }
 
     public Page<PostResponse> getPostsByUser(Long userId, int page, int size) {
@@ -111,14 +107,14 @@ public class PostService {
         return null;
     }
 
-    public List<PostResponse> getPostsByTag(Tag tag) {
-        List<Post> postsByTag = postRepository.findAll().stream().filter(post -> post.getTags().contains(tag)).toList();
-        return postsByTag.stream().map(this::fromEntity).collect(Collectors.toList());
+    public List<PostResponse> getPostsByTagName(String tagName) {
+        List<Post> postsByTag = postRepository.findAll().stream().filter(post -> post.getTags().stream().anyMatch(tag -> tag.getTagName().equals(tagName))).toList();
+        return postsByTag.stream().map(PostResponse::fromEntity).collect(Collectors.toList());
     }
 
     public List<PostResponse> getPosts(){
         List<Post> posts = postRepository.findAll();
-        return posts.stream().map(this::fromEntity).collect(Collectors.toList());
+        return posts.stream().map(PostResponse::fromEntity).collect(Collectors.toList());
     }
 
     public void updatePost(Long id, PostRequest postRequest){
@@ -159,7 +155,6 @@ public class PostService {
             }
             default -> System.out.println("Illegal post type!");
         }
-
         postRepository.save(post);
     }
 
@@ -179,20 +174,5 @@ public class PostService {
             fileUtil.deleteFile((post.getPostType().toLowerCase() + "s"), post.getContent());
         }
         postRepository.deleteById(id);
-    }
-
-    private PostResponse fromEntity(Post post) {
-        return PostResponse.builder()
-                .id(post.getId())
-                .title(post.getTitle())
-                .description(post.getDescription())
-                .content(post.getContent())
-                .postType(post.getPostType())
-                .publishedDate(post.getPublishedDate())
-                .modifiedDate(post.getModifiedDate())
-                .averageRate(rateRepository.findAverageRate(post))
-                .tags(post.getTags().stream().map(TagResponse::fromEntity).collect(Collectors.toList()))
-                .user(UserResponse.fromEntity(post.getUser()))
-                .build();
     }
 }
